議論をプロジェクト間で移動できるようにする Fixes #415
